--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor_device.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor_device.xml
@@ -82,4 +82,7 @@
     <carrier_config mcc="405" mnc="51,52,53,54,55,56">
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
     </carrier_config>
+    <carrier_config mcc="405" mnc="840,854,855,856,857,858,859,860,861,862,863,864,865,866,867,868,869,870,871,872,873,874">
+        <boolean name="carrier_wfc_ims_available_bool" value="true" />
+    </carrier_config>
 </carrier_config_list>
